hotfix: Fix visibility on phone

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -27,7 +27,6 @@ body {
   display: flex;
   place-items: center;
   padding: 0;
-  overflow: hidden;
 }
 
 @media (hover: hover) {
